# q

./: .gitignore  Cargo.toml  Makefile  README.md
ebpf/: Cargo.toml  Makefile  README.md  bindings
ebpf/src/: binding.rs  main.rs
kprobetcp/: Cargo.toml
kprobetcp-common/: Cargo.toml
kprobetcp-ebpf/: Cargo.toml
kprobetcp-ebpf/src/: binding.rs  main.rs
kprobetcp/src/: main.rs
q/: Cargo.toml
q/src/: main.rs
servers/: .gitignore  Makefile  dysfunctional-accept-not-read-unix-exec  dysfunctional-accept-not-read-unix.c  dysfunctional-accept-read-not-write-unix-exec  dysfunctional-accept-read-not-write-unix.c  dysfunctional-accept-read-write-not-close-unix-exec  dysfunctional-accept-read-write-not-close-unix.c  dysfunctional-listen-not-accept-tcp-exec  dysfunctional-listen-not-accept-tcp.c  dysfunctional-listen-not-accept-unix-exec  dysfunctional-listen-not-accept-unix.c  dysfunctional-listen-not-accept.c  functional-server-tcp-exec  functional-server-tcp.c  functional-server-unix-exec  functional-server-unix.c
shared/: Cargo.toml
shared/src/: lib.rs
userspace/: Cargo.toml
userspace/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
