[package]
name = "ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", tag = "aya-log-v0.1.13" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", tag = "aya-log-v0.1.13" }
shared = { path = "../shared" }

[[bin]]
name = "qprobe"
path = "src/main.rs"

[workspace]
members = []