[package]
name = "quserspace"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", features = [
    "async_tokio",
] }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
qcommon = { path = "../shared", features = ["user"] }
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }

[[bin]]
name = "kprobetcp"
path = "src/main.rs"
